--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^2.18.1"
+    "react-native-screens": "^2.18.1",
+    "react-native-video": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
