--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-media-controls": "^2.3.0",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "react-native-video": "^5.1.1"
+    "react-native-video": "^5.1.1",
+    "react-native-webview": "^11.4.3"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
